tests/snapshots/tui_snapshots__snapshot_cheatsheet_populated.snap
---
source: tests/tui_snapshots.rs
expression: render_to_string(&mut a)
---
 🧪  Helixir    📦  Module 1/2   📝  Exercise 2/2   [?] help

┌ 📚  Exercises ────────────────────┐┌ Exercise Detail ─────────────────────────────────────────────────────────────────┐
│ ▼ 🗂  M┌ 📜  Grimoire — Spells you've learned ───────────────────────────────────────────────────────────────┐         │
│       │  🗂  Movement  (1/2)                                🗂  Selection  (1/2)                             │         │
│    ✅  │                                                                                                    │         │
│       │     h         left                                    x         line                               │         │
│       │     l         right                                   h         left                               │         │
│ ▶ 🗂  S│                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       └ j/k to scroll · c or Esc to close ─────────────────────────────────────────────────────────────────┘         │
└──────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘

  🏆  ██████████░░░░░░░░░░ 2/4 (50%)      💡 [space] hint  🔄 [r] reset  ⏭️  [n] next  🚪 [q] quit      👀  Watching...
