tests/snapshots/tui_snapshots__snapshot_detail_panel_focused.snap
---
source: tests/tui_snapshots.rs
assertion_line: 116
expression: render_to_string(&mut a)
---
 🧪  Helixir    📦  Module 1/2   📝  Exercise 2/2   [?] help

┌ 📚  Exercises ────────────────────┐┌ Exercise Detail ─────────────────────────────────────────────────────────────────┐
│ ▼ 🗂  Movement (1/2)              ││                                                                                  │
│                                  ││  ⭐ ⭐  Move 2                                                                     │
│    ✅  Move 1                     ││  Category: Movement   Difficulty: 2/3                                            │
│       Move 2                     ││                                                                                  │
│                                  ││  ⌨️   COMMANDS                                                                    │
│ ▶ 🗂  Selection (1/2)             ││                                                                                  │
│                                  ││     w       word                                                                 │
│                                  ││                                                                                  │
│                                  ││  📋  INSTRUCTIONS                                                                 │
│                                  ││                                                                                  │
│                                  ││     Instructions for Move 2                                                      │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││  ───────────────────────────────────────────                                     │
│                                  ││                                                                                  │
│                                  ││  ❌  1 difference found                                                           │
│                                  ││                                                                                  │
│                                  ││     line 1                                                                       │
│                                  ││     - wrong                                                                      │
│                                  ││     + right                                                                      │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││  ── end ──                                                                       │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
└──────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘

  🏆  ██████████░░░░░░░░░░ 2/4 (50%)      💡 [space] hint  🔄 [r] reset  ⏭️  [n] next  🚪 [q] quit      👀  Watching...
