tests/snapshots/tui_snapshots__snapshot_help_overlay.snap
---
source: tests/tui_snapshots.rs
expression: render_to_string(&mut a)
---
 🧪  Helixir    📦  Module 1/2   📝  Exercise 2/2   [?] help

┌ 📚  Exercises ────────────────────┐┌ Exercise Detail ─────────────────────────────────────────────────────────────────┐
│ ▼ 🗂  Movement (1/2)              ││                                                                                  │
│                                  ││  ⭐ ⭐  Move 2                                                                     │
│    ✅  Move 1                     ││  Category: Movement   Difficulty: 2/3                                            │
│       Move 2                     ││                                                                                  │
│                                  ││  ⌨️   COMMANDS                                                                    │
│ ▶ 🗂  Selection (1/2)        ┌ Help ────────────────────────────────────────────────────┐                             │
│                             │                                                          │                             │
│                             │  🧪  Helixir — Recipe Book                                │                             │
│                             │                                                          │                             │
│                             │                                                          │                             │
│                             │    h / ←     Focus exercise list                         │                             │
│                             │                                                          │                             │
│                             │    l / →     Focus exercise detail                       │                             │
│                             │                                                          │                             │
│                             │    j / ↓     Scroll down in focused panel                │                             │
│                             │                                                          │                             │
│                             │    k / ↑     Scroll up in focused panel                  │                             │
│                             │                                                          │                             │
│                             │    Space     Reveal next hint                            │                             │
│                             │                                                          │                             │
│                             │    n         Jump to next incomplete                     │                             │
│                             │                                                          │                             │
│                             │    r         Reset current exercise                      │                             │
│                             │                                                          │                             │
│                             │    Tab       Collapse / expand current module            │                             │
│                             │                                                          │                             │
│                             │    zc/zo/za  Collapse / open / toggle module             │                             │
│                             │                                                          │                             │
│                             └──────────────────────────────────────────────────────────┘                             │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
│                                  ││                                                                                  │
└──────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘

  🏆  ██████████░░░░░░░░░░ 2/4 (50%)      💡 [space] hint  🔄 [r] reset  ⏭️  [n] next  🚪 [q] quit      👀  Watching...
